--- a/spring-cloud-gateway-core/pom.xml
+++ b/spring-cloud-gateway-core/pom.xml
@@ -123,6 +123,7 @@
 		</dependency>
 	</dependencies>
 	<build>
+	<pluginManagement>
 		<plugins>
 			<plugin>
 				<!-- Based on instructions here - https://kotlinlang.org/docs/reference/using-maven.html -->
@@ -202,6 +203,7 @@
 				</executions>
 			</plugin>
 		</plugins>
+		</pluginManagement>
 	</build>
 	<profiles>
 		<profile>
